# outils-info-project

./: .env.dev.example  .env.prod.example  .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml  compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  logger.py  main.py
backend/app/api/: users.py
backend/app/models/: user.py
backend/app/schemas/: user.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: HomeView.vue  LoginView.vue
