[project]
name = "project-base"
version = "0.1.0"
description = "Template de projet - cours WEB HEIG-VD"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.18",
  "bcrypt>=4.0.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
